src/main/kotlin/com/example/lottery/util/error/BusinessValidationException.kt
package com.example.lottery.util.error

class BusinessValidationException(message: String) : RuntimeException(message)
